--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,11 @@ inherit_gem:
   rubocop-rails_config:
     - config/rails.yml
 
+require: rubocop-performance
+
+Performance:
+  Enabled: true
+
 Rails:
   Enabled: true
 
