--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,10 @@ jobs:
 
     strategy:
       matrix:
-        ruby: [2.3, 2.6]
+        ruby: [2.4, 2.6]
         rails: [4, 5, 6]
         exclude:
-          - ruby: 2.3
+          - ruby: 2.4
             rails: 6
 
     steps:
@@ -26,7 +26,7 @@ jobs:
       env:
         RAILS_VERSION: ~> ${{ matrix.rails }}
       run: |
-        rm Gemfile.lock
+        rm -rf Gemfile.lock
         sudo apt-get install libsqlite3-dev
         gem install bundler -v '~> 1'
         echo $RAILS_VERSION | grep -q '4' && export SQLITE3_VERSION='~> 1.3.6'
