--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   ruby_rails_test_matrix:
@@ -28,6 +28,7 @@ jobs:
       run: |
         rm -rf Gemfile.lock
         sudo apt-get install libsqlite3-dev
+        gem uninstall bundler -a --force
         gem install bundler -v '~> 1'
         echo $RAILS_VERSION | grep -q '4' && export SQLITE3_VERSION='~> 1.3.6'
         bundle
