--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,23 +4,23 @@ on: [push, pull_request]
 
 jobs:
   ruby_rails_test_matrix:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        ruby: [2.4, 2.6]
-        rails: [4, 5, 6]
+        ruby: [2.4, 2.7]
+        rails: [5, 6]
         exclude:
           - ruby: 2.4
             rails: 6
 
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2
 
-    - name: Sets up the environment
-      uses: actions/setup-ruby@v1
+    - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
+        bundler-cache: true
 
     - name: Runs code QA and tests
       env:
@@ -29,8 +29,7 @@ jobs:
         rm -rf Gemfile.lock
         sudo apt-get update
         sudo apt-get install libsqlite3-dev
-        gem uninstall bundler -a --force
-        gem install bundler -v '~> 1'
         echo $RAILS_VERSION | grep -q '4' && export SQLITE3_VERSION='~> 1.3.6'
+        echo $RAILS_VERSION | grep -q '4' && RUBOCOP_VERSION='~> 0.77'
         bundle
-        rake
+        bundle exec rake
