--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         ruby: [2.4, 2.7]
-        rails: [5, 6]
+        rails: ['5', '6.0', '6']
         exclude:
           - ruby: 2.4
             rails: 6
