--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,8 @@ jobs:
         exclude:
           - ruby: 2.4
             rails: 6
+          - ruby: '3.0'
+            rails: 5
 
     steps:
     - uses: actions/checkout@v2
