--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,13 @@ jobs:
 
     strategy:
       matrix:
-        ruby: [2.4, 2.7]
+        ruby: [2.4, 2.7, '3.0']
         rails: ['5', '6.0', '6']
         exclude:
           - ruby: 2.4
             rails: 6
+          - ruby: '3.0'
+            rails: 5
 
     steps:
     - uses: actions/checkout@v2
