--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,14 @@ jobs:
 
     strategy:
       matrix:
-        ruby: [2.4, 2.7, '3.0']
-        rails: ['5', '6.0', '6']
+        ruby: [2.6, '3.0', '3.1']
+        rails: [5, 6, 7]
         exclude:
-          - ruby: 2.4
-            rails: 6
+          - ruby: '2.6'
+            rails: 7
           - ruby: '3.0'
+            rails: 5
+          - ruby: '3.1'
             rails: 5
 
     steps:
@@ -31,7 +33,6 @@ jobs:
         rm -rf Gemfile.lock
         sudo apt-get update
         sudo apt-get install libsqlite3-dev
-        echo $RAILS_VERSION | grep -q '4' && export SQLITE3_VERSION='~> 1.3.6'
-        echo $RAILS_VERSION | grep -q '4' && RUBOCOP_VERSION='~> 0.77'
+        echo $RAILS_VERSION | grep -q '5' && export SQLITE3_VERSION='~> 1.3.6'
         bundle
         bundle exec rake
