--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,14 +9,10 @@ jobs:
     strategy:
       matrix:
         ruby: [2.6, '3.0', '3.1']
-        rails: [5, 6, 7]
+        rails: [6, 7]
         exclude:
           - ruby: '2.6'
             rails: 7
-          - ruby: '3.0'
-            rails: 5
-          - ruby: '3.1'
-            rails: 5
 
     steps:
     - uses: actions/checkout@v3
