--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,13 @@ jobs:
 
     strategy:
       matrix:
-        ruby: [2.6, '3.0', '3.1']
+        ruby: [2.6, '3.0', '3.1', 3.2]
         rails: [6, 7]
         exclude:
           - ruby: '2.6'
             rails: 7
+          - ruby: 3.2
+            rails: 6
 
     steps:
     - uses: actions/checkout@v3
