--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,8 @@ jobs:
     strategy:
       matrix:
         ruby: [2.7, '3.0', '3.1', 3.2]
-        rails: [6, 7]
+        rails: [6, '7.0', '7.1']
         exclude:
-          - ruby: '2.7'
-            rails: 7
           - ruby: 3.2
             rails: 6
 
