--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,8 @@ jobs:
 
     strategy:
       matrix:
-        ruby: [2.7, '3.0', '3.1', 3.2]
-        rails: [6, '7.0', '7.1']
+        ruby: ['3.0', '3.1', '3.2', '3.3']
+        rails: ['6.1', '7.0', '7.1']
         exclude:
           - ruby: 3.2
             rails: 6
