--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,14 +5,17 @@ on: [push, pull_request]
 jobs:
   ruby_rails_test_matrix:
     runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.experimental }}
 
     strategy:
       matrix:
-        ruby: ['3.0', '3.1', '3.2', '3.3']
-        rails: ['6.1', '7.0', '7.1']
-        exclude:
-          - ruby: 3.2
-            rails: 6
+        ruby: ['3.1', '3.2', '3.3']
+        rails: ['6.1', '7.0.1']
+        experimental: [false]
+        include:
+          - rails: '7.1'
+            ruby: '3.3'
+            experimental: true
 
     steps:
     - uses: actions/checkout@v4
@@ -29,6 +32,5 @@ jobs:
         rm -rf Gemfile.lock
         sudo apt-get update
         sudo apt-get install libsqlite3-dev
-        echo $RAILS_VERSION | grep -q '5' && export SQLITE3_VERSION='~> 1.3.6'
         bundle
         bundle exec rake
